--- a/final/local.tex
+++ b/final/local.tex
@@ -14,6 +14,7 @@
 \newtheorem{corollary}{Corollary}
 \newcommand{\propname}{Proposition}
 \newcommand{\equationname}{Equation}
+\newcommand{\lemmaname}{Lemma}
 \newcommand{\theoremname}{Theorem}
 \newcommand{\corollaryname}{Corollary}
 \newcommand{\txtclr}[1]{\textcolor{#1}{#1}}  % colored text
