--- a/final/problems.tex
+++ b/final/problems.tex
@@ -117,10 +117,10 @@ For the purposes of this research, the NP-complete problems are assumed to have 
 find a solution and polynomial runtime complexity to verify a solution, and the NP-hard problems are assumed to
 have exponential runtime for both finding and verifying solutions.
 
-The chromatic number problem is NP-hard: it requires exponential time to exhaustively generate and check all
-possible independent set partitions to find a partition with the smallest number of independent sets \(k\), and the
-same basic procedure must be used to verify that given a supposed \(k\)-chromatic coloring, there does not exist a
-proper coloring for smaller \(k\).
+The chromatic number problem is NP-hard~\cite{mcdiarmid}: it requires exponential time to exhaustively generate and
+check all possible independent set partitions to find a partition with the smallest number of independent sets
+\(k\), and the same basic procedure must be used to verify that given a supposed \(k\)-chromatic coloring, there
+does not exist a proper coloring for smaller \(k\).
 
 \subsubsection{Space Complexity}\label{sec:sub:sub:space}
 
