--- a/final/references.bib
+++ b/final/references.bib
@@ -130,6 +130,15 @@
   pages={1-14}
 }
 
+@article{moon,
+  author={Moon, J.W. and Moser, L.},
+  title={On Cliques in Graphs},
+  journal={Israel Journal of Mathematics},
+  volume={3},
+  year={1965},
+  pages={23--28}
+}
+
 @article{read,
   author={Read, Ronald C.},
   title={An Introduction to Chromatic Polynomials},
@@ -138,6 +147,7 @@
   year={1968},
   pages={52--71}
 }
+
 @article{shirwaiker,
   author={Shirwaiker, Rohan A. and Okudan, G\"{u}l E.},
   title={Triz and Axiomatic Design: A Review of Case-Studies and a Proposed Synergistic Use},
