Working on Zykov

--- a/final/references.bib
+++ b/final/references.bib
@@ -73,6 +73,15 @@
   year={1979}
 }
 
+@mastersthesis{graham,
+  author={Graham, Barry}, 
+  title={An Algorithm to Determine the Chromatic Number of a Graph},
+  school={University of Toronto},
+  address={Ontario, Canada},
+  month={October},
+  year={1972}
+}
+
 @article{hopcroft,
   author={Hopcroft, John and Tarjan, Robert},
   title={Algorithm 447: Efficient Algorithms for Graph Manipulation},
