--- a/final/chromatic.tex
+++ b/final/chromatic.tex
@@ -541,25 +541,27 @@ combined with the parent state uses all of the vertices.  The final coloring is 
 
 The results of a random graph analysis of the Christofides algorithm are shown in \figurename~\ref{fig:cfstates}.
 The graph shows edge probability versus the mean of the number of states for graphs of increasing order with
-\(1000\) trials per edge probability.
+\(1000\) trials per edge for orders less than \(20\) and \(100\) trials per edge for orders greater than or equal
+to \(20\) (due to increased runtime duration).
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=5in]{christofides_states}
-  \caption{Chistofides algorithm mean number of states.}
+  \caption{Christofides algorithm mean number of states.}
   \label{fig:cfstates}
 \end{figure}
 
 The number of states increases with both graph order and edge probability.  The worst case for each order is thus
-assumed to occur at \(90\%\) edge probability.  A log (base 2) plot of the maximum number of states for the
-\(1000\) graphs at each order is plotted in \figurename~\ref{fig:cfruntime}.  A line fit is used to approximate the
-runtime complexity for the algorithm.  The slope of the line indicates that the runtime complexity is about
-\(\BO(2^{0.8393n})\approx\BO(1.79^n)\).
+assumed to occur at \(90\%\) edge probability.  A log (base 2) plot of the maximum number of states for each order
+at \(90\%\) edge probability is plotted in \figurename~\ref{fig:cfruntime}.  A logarithmic curve fit is used to
+approximate the runtime complexity for the algorithm.  The curve fit indicates that the runtime complexity is about
+\(\BO(2^{9.2127\ln(n)})\approx\BO(2^{6.7858\log(n)})\approx\BO(84^{\log(n)})\) --- still not polynomial but better
+than exponential.
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=5in]{christofides_runtime}
-  \caption{Christofides algorithm runtime complexity.}
+  \caption{Christofides algorithm runtime complexity assuming \(\BO(c^n)\).}
   \label{fig:cfruntime}
 \end{figure}
 
@@ -608,27 +610,23 @@ depth-first search is now economical.
 
 The results of a random graph analysis of Wang's improvements to the Christofides algorithm are shown in
 \figurename~\ref{fig:wangstates}.  The graph shows edge probability versus the mean of the number of states for
-graphs of increasing order with \(1000\) trials per edge probability.
+graphs of increasing order with \(1000\) trials per edge for orders less than \(20\) and \(100\) trials per edge
+for orders greater than or equal to \(20\) (due to increased runtime duration).
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=5in]{wang_states}
-  \caption{Chistofides algorithm with Wang improvements mean number of states.}
+  \caption{Christofides algorithm with Wang improvements mean number of states.}
   \label{fig:wangstates}
 \end{figure}
 
 The results are quite surprising.  Not only is there a dramatic overall improvement, it now appears that the worst
 case occurs at moderate edge density.  Intuition suggests that lower edge density graphs will have fewer and larger
 MISs.  For the high density case, it may be that each vertex is in fewer MISs.  The worst case for each order is
-thus assumed to occur at \(50\%\) edge probability.  A log (base 2) plot of the maximum number of states for the
-\(1000\) graphs at each order is plotted in \figurename~\ref{fig:wangruntime}.  A line fit is used to approximate
-the runtime complexity for the algorithm.  The slope of the line indicates that the runtime complexity is about
-\(\BO(2^{0.7424n})\approx\BO(1.67^n)\).
-
-Although the improvement from \(BO(1.79^n)\) to \(BO(1.67^n)\) may not seem like much, the runtime duration
-difference was noticable during testing.  In fact, the Christofides algorithm topped out around \(20\) vertices
-before the time duration became overly long.  With the Wang improvements, reasonable runs greater than \(30\)
-vertices were possible.  Runtime duration comparisons will be considered in the next section.
+thus assumed to occur at \(50\%\) edge probability.  A log (base 2) plot of the maximum number of states for each
+order at \(50\%\) edge probability is plotted in \figurename~\ref{fig:wangruntime}.  This time, a polynomial curve
+fit appears to be more appropriate.  The curve fit indicates that the runtime complexity is about
+\(\BO(2^{0.0083n^2})\approx\BO(1.0057^{n^2})\).
 
 \begin{figure}[H]
   \centering
@@ -636,6 +634,12 @@ vertices were possible.  Runtime duration comparisons will be considered in the 
   \caption{Christofides algorithm with Wang improvements runtime complexity.}
   \label{fig:wangruntime}
 \end{figure}
+
+A comparison of the Christofides and Wang runtime complexities indicates some pitfalls of big-\(\BO\) notation and
+improvements to exhaustive algorithms.  The \(\BO(c^{\log(n)})\) runtime complexity of Christofides versus the
+\(\BO(c^{n^2})\) runtime complexity of Wang indicates that for large \(n\) the benefits of the Wang improvements
+are lost to the required additional processing.  Comparing the two fit equations from \figurename~\ref{fig:cfruntime}
+and \figurename~\ref{fig:wangruntime}, the break even point appears to be \(n\approx30\).
 
 \subsection{Zykov Algorithms}\label{sec:sub:zykov}
 
@@ -935,45 +939,62 @@ the three leaf states are complete graphs of order \(3\) or \(4\).  Therefore, t
   \label{fig:ztree}
 \end{figure}
 
-Zykov algorithms typically have three components:
+The worst case for a Zykov algorithm with no bounding is an empty graph, where the number of leaf nodes is
+equivalent to the number of partitions of the set of vertices.  This is known to be the so-called Bell
+number~\cite{graham}:
+\[B_n=\sum_{k=1}^nS_{n,k}\]
+where the \(S_{n,k}\) are the so-called Stirling numbers of the second kind:
+\[S_{n,k}=\frac{1}{k!}\sum_{i=0}^k(-1)^i\binom{k}{i}(k-i)^n\]
+The actual runtime complexity is worse because each partition leaf node is at the end of a branch from the root
+state consisting of a certain number of states that depends on the number of nonadjacencies in a graph.
+
+Branch and bound Zykov algorithms require the following components:
 \begin{enumerate}
 \item A main routine that establishes \(G\) as the root of the state tree.
 \item A global variable \(X\) that records the state corresponding to the current smallest \coloring{k}.
-\item A recursive subroutine that performs the depth-first search of the state tree and updates \(X\) as
+\item A global variable \(b\) that records the current upper bound for the chromatic number of \(G\).
+\item A method to determine a lower bound for the chromatic number of a graph.
+\item A method to determine an upper bound \(k\) for the chromatic number of a graph \(G\) and a corresponding
+  \coloring{k} of \(G\).
+\item A recursive subroutine that performs the depth-first search of the state tree and updates \(X\) and \(b\) as
   necessary.
 \end{enumerate}
+
+The lower bound method is typically one of the clique number lower bound algorithms (e.g. Edwards Elphick).  The
+upper bound method is typically a greedy coloring algorithm (e.g., last first).
 
 The steps of the main routine are as follows:
 \begin{enumerate}
 \item Construct a graph \(G'\) that is isomorphic to \(G\) and where each vertex in \(G'\) is a set of contracted
   vertices initialized to a one element set containing the corresponding vertex in \(G\).
-\item Initialize \(X=G'\).
+\item Run the greedy algorithm and set \(X\) and \(b\) based on the results.
 \item Call the recursive subroutine with \(G'\).
-\item Return \(n(X)\) as the found chromatic number for \(G\) and \(X\) representing a chromatic coloring of \(G\).
+\item Return \(b\) or \(n(X)\) as the found chromatic number for \(G\) and \(X\) representing a chromatic coloring
+  of \(G\).
 \end{enumerate}
 
-The recursive subroutine is called with a graph \(H\) and has access to \(X\).  The steps are as follows:
-
+The recursive subroutine is called with a graph \(H\) and has access to \(X\) and \(b\).  The steps are as follows:
 \begin{enumerate}
-\item\label{step:zykov:check} If \(H\) is not complete then go to step~\ref{step:zykov:branch}.
+\item If \(n(H)<b\) then \(b=n(H)\).
+\item If \(H\) is not complete then go to step~\ref{step:zbound:branch}.
 \item If \(n(H)<n(X)\) then \(X=H\).
-\item Go to step~\ref{step:zykov:done}.
-\item\label{step:zykov:branch} Select any two nonadjacent vertices \(u\) and \(v\) in \(H\).
+\item Go to step~\ref{step:zbound:done}.
+\item Determine the chromatic number lower bound for \(H\).  If it is greater than or equal to the current
+  upper bound then go to step~\ref{step:zbound:done}.
+\item\label{step:zbound:branch} Select any two nonadjacent vertices \(u\) and \(v\) in \(H\).
 \item Construct \(H'=H\cdot uv\), where the vertex set for the new contracted vertex is the union of the vertex
   sets for \(u\) and \(v\).
 \item Recursively call this subroutine with \(H'\).
 \item Construct \(H''=H+uv\).
 \item Recursively call this subroutine with \(H''\).
-\item\label{step:zykov:done} Return.
+\item\label{step:zbound:done} Return.
 \end{enumerate}
 
-Since the number of states grows exponentially, there is a need to develop bounding conditions.  Branch and bound
-algorithms of this type are called \emph{Zykov algorithms}.  In fact, McDiarmid~(1978)~\cite{mcdiarmid} shows that
-even with bounding, pure Zykov algorithms have at least \(\BO(c^{n\sqrt{\log(n)}})\) complexity for some real
-number constant \(c>1\), which is worse than exponential.  Thus pure Zykov algorithms will generally perform worse
-than Christofides/Wang-type algorithms.
-
-The next section examines a well-known example of a Zykov algorithm that will be compared to the proposed
-algorithm.
+McDiarmid~(1978)~\cite{mcdiarmid} predicts that even with bounding, Zykov algorithms have a runtime complexity of
+\(\BO(c^{n\sqrt{\log(n)}})\) for some real number constant \(c>1\), which is worse than exponential.  Thus Zykov
+algorithms will generally perform worse than Christofides-type algorithms.
 
 \subsection{The Corneil Graham Algorithm}\label{sec:sub:corneil}
+
+This section examines a well-known example of a Zykov algorithm proposed by Corneil and
+Graham~(1973)~\cite{corneil}.
