Added specific goals

--- a/final/acknowledgments.tex
+++ b/final/acknowledgments.tex
@@ -1,3 +1,8 @@
+The author wishes to thank the faculty at SJSU for their time and support, in particular: graduate advisor
+Dr. Sogol Jahanbekam, undergraduate advisor Dr. Tim Hsu, committee members Dr. Wasin So and Dr. Jordan Schettler,
+and Mathematics department chairperson Dr. Bem Cayco.  Special thanks are also extended to our mechanical
+engineering colleagues Dr. Sara Behdad and graduate student Praveen Gopalakrishnan at SUNY, Buffalo.
+
 This material is based upon work supported by the National Science Foundation–USA under grants \#CMMI-1727190 and
 CMMI-1727743. Any opinions, findings, and conclusions or recommendations expressed in this material are those of
 the author and do not necessarily reflect the views of the National Science Foundation.
