--- a/final/local.tex
+++ b/final/local.tex
@@ -17,6 +17,7 @@
 \newcommand{\lemmaname}{Lemma}
 \newcommand{\theoremname}{Theorem}
 \newcommand{\corollaryname}{Corollary}
+\newcommand{\sectionname}{Section}
 \newcommand{\txtclr}[1]{\textcolor{#1}{#1}}  % colored text
 \newcommand{\mtxtclr}[1]{\text{\txtclr{#1}}}  % colored text in math mode
 \renewcommand{\a}{\alpha}
